news-block overflow issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -199,7 +199,6 @@ body {
 
 .news-block {
   clear: both;
-  overflow: auto;
   margin-bottom: 10px;
 }
 /* -Main block */
